fixup! implement frontend api WIP
also update controller code to new swagger definition
