# controller/api/controllers/Crawls.js
@@ -1,16 +1,16 @@
 'use strict'
 
-var utils = require('../utils/writer.js')
+var { writeJson, respondWithCode } = require('../utils/writer')
 var Crawls = require('../service/CrawlsService')
 
 module.exports.addCrawl = function addCrawl (req, res, next) {
   var crawl = req.swagger.params['crawl'].value
   Crawls.addCrawl(crawl)
     .then(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
-    .catch(function (response) {
-      utils.writeJson(res, response)
+    .catch(function (err) {
+      writeJson(res, respondWithCode(500, err.message))
     })
 }
 
@@ -18,20 +18,41 @@ module.exports.getCrawl = function getCrawl (req, res, next) {
   var crawlId = req.swagger.params['crawl-id'].value
   Crawls.getCrawl(crawlId)
     .then(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
     .catch(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
 }
 
 module.exports.getCrawls = function getCrawls (req, res, next) {
   Crawls.getCrawls()
     .then(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
     .catch(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
+    })
+}
+
+module.exports.handlePreflight = function handlePreflight (req, res, next) {
+  Crawls.handlePreflight()
+    .then(function (response) {
+      writeJson(res, response)
+    })
+    .catch(function (response) {
+      writeJson(res, response)
+    })
+}
+
+module.exports.handlePreflight2 = function handlePreflight2 (req, res, next) {
+  var crawlId = req.swagger.params['crawl-id'].value
+  Crawls.handlePreflight2(crawlId)
+    .then(function (response) {
+      writeJson(res, response)
+    })
+    .catch(function (response) {
+      writeJson(res, response)
     })
 }
 
@@ -39,9 +60,9 @@ module.exports.stopCrawl = function stopCrawl (req, res, next) {
   var crawlId = req.swagger.params['crawl-id'].value
   Crawls.stopCrawl(crawlId)
     .then(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
     .catch(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
 }
